test(security): harden T-PQ-G — anySatisfy/allSatisfy replaces get(0) first-event coupling (F-INFO-2)
auditEvents.get(0) was fragile: if a future log call precedes the expected AUDIT event,
the assertion silently checks the wrong message. Switch to anySatisfy for the positive
check (at least one event carries reason=domain_mismatch) and allSatisfy for the
negative guard (no event leaks raw domain values). Also drops Collectors.toList()
in favour of Stream.toList() (Java 16+) and removes the now-unused import.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>